# e3nn-jax

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  BENCHMARK.md  CHANGELOG.md  ChangeLog.md  LICENSE  README.md  STYLE_GUIDE.md  ___setup.py  conftest.py  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test.py
.github/workflows/: codeql-analysis.yml  lint.yml  release.yml  tests.yml
docker/: Dockerfile  Dockerfile.cuda111  test.py
docs/: BENCHMARK.rst  README.md  conf.py  index.rst  requirements.txt
docs/api/: equinox.rst  extra.rst  flax.rst  haiku.rst  index.rst  irreps.rst  irreps_array.rst  irreps_data.rst  legacy.rst  math.rst  nn.rst  operations.rst  poly_envelope.rst  radial.rst  s2.rst  so3.rst  spherical_harmonics.rst  tensor_product.rst  tensor_products.rst  utils.rst
docs/tuto/: index.rst  nequip.rst
e3nn_jax/: __init__.py  _activation.py  _batchnorm.py  _config.py  _core_tensor_product.py  _dropout.py  _einsum.py  _gate.py  _grad.py  _graph_util.py  _instruction.py  _irreps.py  _irreps_array.py  _irrepsdata.py  _linear.py  _nn.py  _poly_envelope.py  _reduced_tensor_product.py  _rotation.py  _so3.py  _soft_one_hot_linspace.py  _spherical_harmonics.py  _su2.py  _symmetric_powers.py  _tensor_product.py  _tensor_products.py  _tp_makers.py  _w3j_exact.py  _wigner.py  _zero.py  dataclasses.py  equinox.py  flax.py  haiku.py  legacy.py  perm.py  util.py  utils.py
e3nn_jax/_constants/: _G_beta.py  _J.py  _w3j.py
e3nn_jax/_src/: J.py  activation.py  activation_test.py  basic.py  basic_test.py  batchnorm.py  batchnorm_haiku.py  batchnorm_haiku_test.py  batchnorm_test.py  config.py  config_test.py  conftest.py  core_tensor_product.py  core_tensor_product_test.py  dropout.py  dropout_haiku.py  dropout_haiku_test.py  dropout_test.py  einsum_test.py  exp_point_convolution_test.py  fc_tp_haiku.py  fused_spherical_harmonics.py  gate.py  gate_test.py  grad.py  grad_test.py  graph_util.py  graph_util_test.py  instruction.py  irreps.py  irreps_array.py  irreps_array_test.py  irreps_test.py  linear.py  linear_equinox.py  linear_equinox_test.py  linear_flax.py  linear_flax_test.py  linear_haiku.py  linear_haiku_test.py  (+34 more)
e3nn_jax/_src/batchnorm/: bn.py  bn_flax.py  bn_haiku.py  bn_haiku_test.py
e3nn_jax/_src/legacy/: core_tensor_product.py  functional_fully_connected_tensor_product.py
e3nn_jax/_src/spherical_harmonics/: __init__.py  legendre.py  recursive.py
e3nn_jax/_src/util/: decorators.py  dtype.py  jit.py  jit_test.py  math_numpy.py  optimize_jaxpr.py  prod.py  test.py
e3nn_jax/_src/utils/: decorators.py  dtype.py  einsum.py  jit.py  jit_test.py  math_numpy.py  optimize_jaxpr.py  sum_tensors.py  sympy.py  test.py  vmap.py
e3nn_jax/_wigner/: _G_beta.py  _Gx.py  __init__.py  _w3j.py
e3nn_jax/experimental/: linear_shtp.py  linear_shtp_test.py  point_convolution.py  point_convolution_test.py  spherical_harmonics_convolution.py  transformer.py  transformer_test.py  voxel_convolution.py  voxel_convolution_test.py  voxel_pooling.py
e3nn_jax/flax/: __init__.py  _flax.py
e3nn_jax/irrep/: __init__.py
e3nn_jax/nn/: __init__.py  _haiku.py
e3nn_jax/util/: __init__.py  _argtools.py  decorators.py  float_to_frac.py  math_numpy.py  optimize_jaxpr.py  sympy.py  test.py
examples/: irreps_array.py  plot_spherical_harmonics.py  qm9.py  qm9_transformer.py  tensor_product_benchmark.py  tetris.py  tetris_point.py  tetris_point_jraph.py  tetris_point_jraph_test.py  tetris_point_test.py  tetris_voxel.py  tetris_voxel_test.py
math/: wigner.m
misc/: BENCHMARK.md
tests/: activation_test.py  batchnorm_test.py  config_test.py  conftest.py  core_tensor_product_test copy.py  core_tensor_product_test.py  dropout_test.py  einsum_test.py  exp_point_convolution_test.py  exp_transformer_test.py  exp_voxel_convolution_test.py  exp_voxel_pooling.py  gate_test.py  grad_test.py  irreps_array_test.py  irreps_test.py  linear_test.py  noxfile.py  perm_test.py  reduced_tensor_product_test.py  rotation_test.py  spherical_harmonics_test.py  spherical_harmonics_tests.py  tensor_product_test.py  tensor_products_test.py  util_jit_test.py  wigner_test.py
tests/_src/: basic_test.py  config_test.py  gate_test.py  irreps_array_test.py  irreps_test.py  linear_equinox_test.py  linear_flax_test.py  linear_haiku_test.py  perm_test.py  radius_graph_test.py  reduced_tensor_product_test.py  s2grid_test.py  scatter_test.py  so3grid_test.py  symmetric_tensor_product_haiku_test.py
tests/experimental/: linear_shtp_test.py  voxel_convolution_test.py
(+3 files in other folders)
