[build-system]
requires = ["setuptools"]

[project]
name = "e3nn_jax"
version = "0.20.2"
dependencies = [
  "jax",
  "jaxlib",
  "sympy",
  "numpy",
  "attrs",
]
description = "Equivariant convolutional neural networks for the group E(3) of 3 dimensional rotations, translations, and mirrors."

[tool.setuptools]
py-modules = ["e3nn_jax"]

[tool.pydocstyle]
select = ["D415", "D403"]

[tool.black]
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
