[build-system]
requires = ["setuptools"]

[project]
name = "e3nn_jax"
version = "0.20.3"
dependencies = [
  "jax",
  "jaxlib",
  "sympy",
  "numpy",
  "attrs",
]
description = "Equivariant convolutional neural networks for the group E(3) of 3 dimensional rotations, translations, and mirrors."

[tool.setuptools]
py-modules = ["e3nn_jax"]

[tool.pydocstyle]
select = ["D415", "D403"]

[tool.black]
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.coverage.run]
source = ["e3nn_jax"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise",
  "except"
]

[tool.flake8]
ignore = ["E741", "E203", "W503", "E731", "E721"]
max-line-length = 127
max-complexity = 64
