[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "e3nn-jax"
version = "0.20.7"
description = "Equivariant convolutional neural networks for the group E(3) of 3 dimensional rotations, translations, and mirrors."
authors=[
    {name="e3nn team", email="geiger.mario@gmail.com"},
]
readme="README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
  "jax",
  "jaxlib",
  "sympy",
  "numpy",
  "attrs",
]
classifiers = [
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

[project.urls]
homepage="https://e3nn-jax.readthedocs.io"
documentation="https://e3nn-jax.readthedocs.io"
repository="https://github.com/e3nn/e3nn-jax"
changelog="https://github.com/e3nn/e3nn-jax/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "plotly",
  "kaleido",
  "jraph",
  "flax",
  "dm-haiku",
  "equinox",
  "optax",
  "tqdm",
  "pytest",
  "nox",
  "s2fft"
]

[tool.setuptools]
py-modules = ["e3nn_jax"]

[tool.setuptools.packages.find]
exclude = [
  "misc*",
  "docs*",
  "examples*",
]

[tool.pydocstyle]
select = ["D415", "D403"]

[tool.black]
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.coverage.run]
source = ["e3nn_jax"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise",
  "except"
]

[tool.flake8]
ignore = ["E741", "E203", "W503", "E731", "E721"]
max-line-length = 127
max-complexity = 64

[tool.pytest.ini_options]
testpaths = ["tests"]
