[pydocstyle]
select = D415, D403

[metadata]
name = e3nn_jax
version = attr: e3nn_jax.__version__
description = Equivariant convolutional neural networks for the group E(3) of 3 dimensional rotations, translations, and mirrors.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://e3nn.org
classifiers =
    Programming Language :: Python :: 3.7
license = Apache License 2.0
license_file = LICENSE

[options]
packages = find:
python_requires = >=3.7
install_requires =
    jax
    dm-haiku
    flax
    optax
    sympy
    numpy
    tqdm
    attrs
